[gd_scene load_steps=97 format=3 uid="uid://m7lwjnbu1o1t"]

[ext_resource type="Script" uid="uid://0c1qdwxdq6xj" path="res://scripts/player.gd" id="1_mnbfj"]
[ext_resource type="Resource" uid="uid://uv2iux6idh35" path="res://inventory/playersinventory.tres" id="2_smehm"]
[ext_resource type="Texture2D" uid="uid://dwjluo0qknhdm" path="res://The Fantasy Tileset - Animated Character/Main Character/Character_Slash.png" id="3_i2rpx"]
[ext_resource type="Texture2D" uid="uid://lx2pdt021wh1" path="res://new sprites/pick_up.png" id="4_3v2ag"]
[ext_resource type="Script" uid="uid://6magwi38044s" path="res://scripts/match_manager.gd" id="5_6np8s"]
[ext_resource type="Texture2D" uid="uid://ssxll17rbne3" path="res://new sprites/character_base_16x16 (1) (1).png" id="5_smehm"]
[ext_resource type="Texture2D" uid="uid://dygtfbsknjoo1" path="res://new sprites/trip.png" id="5_ur7pv"]
[ext_resource type="Script" uid="uid://b81f7k8fnd2d8" path="res://scripts/WarmthScript.gd" id="6_kmdk0"]
[ext_resource type="Texture2D" uid="uid://cica03vp23if5" path="res://new sprites/final sprites/2d_lights_and_shadows_neutral_point_light.webp" id="8_d2wvv"]
[ext_resource type="Texture2D" uid="uid://001hvn7melyh" path="res://icon.svg" id="8_jej6c"]
[ext_resource type="PackedScene" uid="uid://0murhdcfe2sk" path="res://inventory/inv_ui.tscn" id="8_ur7pv"]
[ext_resource type="SpriteFrames" uid="uid://b1fvs6oaxbvkv" path="res://sprite_resources/moon_idol.tres" id="11_3v2ag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("5_smehm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("5_smehm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("5_smehm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("5_smehm")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("5_smehm")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("5_smehm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("5_smehm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("5_smehm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("5_smehm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("5_smehm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("5_smehm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("5_smehm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("5_smehm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_um82g"]
atlas = ExtResource("3_i2rpx")
region = Rect2(40, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1li"]
atlas = ExtResource("3_i2rpx")
region = Rect2(160, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2l6l"]
atlas = ExtResource("3_i2rpx")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpbs"]
atlas = ExtResource("3_i2rpx")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa5fg"]
atlas = ExtResource("3_i2rpx")
region = Rect2(40, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhr4v"]
atlas = ExtResource("3_i2rpx")
region = Rect2(80, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lunnu"]
atlas = ExtResource("3_i2rpx")
region = Rect2(40, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s04iv"]
atlas = ExtResource("3_i2rpx")
region = Rect2(80, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("4_3v2ag")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("4_3v2ag")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("5_ur7pv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("5_ur7pv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("5_ur7pv")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("5_ur7pv")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("5_ur7pv")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("5_ur7pv")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("5_ur7pv")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("5_ur7pv")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("5_ur7pv")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("5_ur7pv")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("5_ur7pv")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"Idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"Idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"Idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": false,
"name": &"Idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}],
"loop": false,
"name": &"Match_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}],
"loop": false,
"name": &"Match_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}],
"loop": false,
"name": &"Match_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": false,
"name": &"Match_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"Walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"Walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": true,
"name": &"Walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": true,
"name": &"Walk_up",
"speed": 8.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_um82g")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_gx1li")
}],
"loop": true,
"name": &"dying_down",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2l6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpbs")
}],
"loop": true,
"name": &"dying_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa5fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhr4v")
}],
"loop": true,
"name": &"dying_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lunnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s04iv")
}],
"loop": false,
"name": &"dying_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}],
"loop": false,
"name": &"place_campfire_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}],
"loop": false,
"name": &"place_campfire_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}],
"loop": false,
"name": &"place_campfire_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}],
"loop": false,
"name": &"place_campfire_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}],
"loop": false,
"name": &"place_failed_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}],
"loop": false,
"name": &"place_failed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}],
"loop": false,
"name": &"place_failed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": false,
"name": &"place_failed_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": false,
"name": &"trip_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": false,
"name": &"trip_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}],
"loop": false,
"name": &"trip_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": false,
"name": &"trip_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3v2ag"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
visibility_layer = 512
z_index = 1
position = Vector2(8, -11)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_mnbfj")
inv = ExtResource("2_smehm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.78814e-07, 1.19209e-07)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"Walk_up"

[node name="MatchManager" type="Node2D" parent="."]
script = ExtResource("5_6np8s")

[node name="MatchLight" type="PointLight2D" parent="MatchManager"]
visible = false
position = Vector2(-4, 0)
color = Color(1, 0.819608, 0.6, 1)
energy = 0.1
texture = ExtResource("8_d2wvv")
texture_scale = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
shape = SubResource("RectangleShape2D_fjrip")

[node name="RayCast2D_Up" type="RayCast2D" parent="."]
visibility_layer = 3
target_position = Vector2(0, -16)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
visibility_layer = 3
target_position = Vector2(-16, 0)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2D_Down" type="RayCast2D" parent="."]
visibility_layer = 3
target_position = Vector2(0, 16)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
visibility_layer = 3
target_position = Vector2(16, 0)
collision_mask = 3
hit_from_inside = true
collide_with_areas = true

[node name="black" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 999
z_as_relative = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_jej6c")

[node name="Warmth" type="Node2D" parent="."]
position = Vector2(-8, 8)
script = ExtResource("6_kmdk0")

[node name="Timer" type="Timer" parent="Warmth"]
one_shot = true

[node name="boots" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 0)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("11_3v2ag")
animation = &"Walk_up"

[node name="gloves" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.96046e-08, 3.57628e-07)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_3v2ag")

[node name="idols" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.96046e-08, 3.57628e-07)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_jej6c")

[node name="Inv_Ui" parent="." instance=ExtResource("8_ur7pv")]
offset_left = -63.0
offset_top = 24.0
offset_right = 147.0
offset_bottom = 48.0

[node name="Idol_Light" type="PointLight2D" parent="."]
visible = false
scale = Vector2(8.49219, 6.16797)
color = Color(0.568403, 0.937774, 0.851896, 1)
texture = ExtResource("8_d2wvv")
texture_scale = 0.1

[node name="FootstepSFX1" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
pitch_scale = 10.0

[node name="FootstepSFX2" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
pitch_scale = 0.1

[node name="FootstepSFX3" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
pitch_scale = 0.1

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="sanity_changed" from="Warmth" to="Inv_Ui" method="_on_warmth_sanity_changed"]
[connection signal="warmth_changed" from="Warmth" to="Inv_Ui" method="_on_warmth_warmth_changed"]
[connection signal="timeout" from="Warmth/Timer" to="Warmth" method="_on_timer_timeout"]
[connection signal="timeout" from="FootstepTimer" to="." method="_on_footstep_timer_timeout"]
